// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnknownPage component should render correctly With default props 1`] = `
<div>
  <ul>
    <li>
      <Link
        replace={true}
        to="/1"
      >
        1
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/2"
      >
        2
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/3"
      >
        3
      </Link>
    </li>
  </ul>
</div>
`;

exports[`UnknownPage component should render correctly With text prop 1`] = `
<div>
  text
  <ul>
    <li>
      <Link
        replace={true}
        to="/1"
      >
        1
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/2"
      >
        2
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/3"
      >
        3
      </Link>
    </li>
  </ul>
</div>
`;
